--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.49MB/s(Youtube:不良林), server: shanghai-router1-892412-jp6.dukou.info, port: 6306, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp6.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-229.8KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.42MB/s(Youtube:不良林), server: shanghai-router1-892412-jp5.dukou.info, port: 6305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp5.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.00MB/s(Youtube:不良林), server: shanghai-router1-892412-jp3.dukou.info, port: 6303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp3.dukou.info, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-325.1KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 51.161.118.38, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-453.2KB/s(Youtube:不良林), server: 113.31.109.30, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-329.1KB/s(Youtube:不良林), server: 113.31.109.30, port: 3389, type: trojan, password: 22e7ebb2dc8ab524, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.16MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-15.56MB/s(Youtube:不良林), server: sg-cn-hk-relay-4-40e978.dukou.info, port: 9304, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-4-40e978.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.05MB/s(Youtube:不良林), server: hk-route-12369-9.dukou.info, port: 8309, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-9.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-823.6KB/s(Youtube:不良林), server: 51.161.118.38, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-211.9KB/s(Youtube:不良林), server: zh01lv5ca05.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
+  - {name: 🇨🇳 中国-8.77MB/s(Youtube:不良林), server: hk-route-12369-2.dukou.info, port: 8302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-2.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.68MB/s(Youtube:不良林), server: hk10-gray.dukou.info, port: 8310, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk10-gray.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.32MB/s(Youtube:不良林), server: hk-route2-azure-hk8.dukou.info, port: 8308, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route2-azure-hk8.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.92MB/s(Youtube:不良林), server: us-cn-hk-relay-2-3cc426.dukou.info, port: 7302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: us-cn-hk-relay-2-3cc426.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.60MB/s(Youtube:不良林), server: kr-cn-relay-1-452x4.dukou.info, port: 3301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-1-452x4.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-16.83MB/s(Youtube:不良林), server: hk-route2-azure-hk7.dukou.info, port: 8307, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route2-azure-hk7.dukou.info, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇩🇪 德国-325.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇩🇪 德国-325.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇩🇪 德国-325.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇩🇪 德国-325.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇩🇪 德国-325.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇩🇪 德国-325.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇩🇪 德国-325.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
