--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.13MB/s(Youtube:不良林), server: hk-route2-azure-hk7.dukou.info, port: 8307, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route2-azure-hk7.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.36MB/s(Youtube:不良林), server: shanghai-router1-892412-jp4.dukou.info, port: 6304, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp4.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.32MB/s(Youtube:不良林), server: kr-cn-relay-2-32v22.dukou.info, port: 3302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-2-32v22.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.42MB/s(Youtube:不良林), server: sg-cn-relay-7-74812.dukou.info, port: 9307, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-relay-7-74812.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.99MB/s(Youtube:不良林), server: hk-cnrelay-13-138465.dukou.info, port: 8313, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-cnrelay-13-138465.dukou.info, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.00MB/s(Youtube:不良林), server: sg-cn-hk-relay-2-54bc52.dukou.info, port: 9302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-2-54bc52.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.84MB/s(Youtube:不良林), server: tw-cn-hk-relay-1-97861a.dukou.info, port: 5301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: tw-cn-hk-relay-1-97861a.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.15MB/s(Youtube:不良林), server: sg-cn-hk-relay-5-51f087.dukou.info, port: 9305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-5-51f087.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: us-cn-hk-relay-3-49ae82.dukou.info, port: 7303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: us-cn-hk-relay-3-49ae82.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: hk-route-12369-us5.dukou.info, port: 7005, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-us5.dukou.info, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
